--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ avatar_image: /img/IMG_2692.JPG
 
 #-------------------------------
 # Contact links
-linkedln: "linkedin.com/in/asim-shahzad-82183b2" # Add your linkedln handle
+linkedln: "https://www.linkedin.com/in/asim-shahzad-82183b2" # Add your linkedln handle
 github: "https://funkdoctor1977.github.io/"  # Add your github handle
 
 paginate: 6
